[gd_scene load_steps=18 format=3 uid="uid://bo152sgxaiwe2"]

[ext_resource type="Script" uid="uid://b4jtek5cx1twe" path="res://src/levels/level_2.gd" id="1_a0sv2"]
[ext_resource type="Texture2D" uid="uid://cg4oxtfo3jevq" path="res://temp_tileset.png" id="1_u7gnt"]
[ext_resource type="PackedScene" uid="uid://rugf5l3ahk7o" path="res://src/levels/background_industrial.tscn" id="2_a0sv2"]
[ext_resource type="Texture2D" uid="uid://clundicf20ydi" path="res://src/images/Door.png" id="4_tppch"]
[ext_resource type="Texture2D" uid="uid://bp4fx04rjs8wr" path="res://src/images/hatch.png" id="5_ebaqd"]
[ext_resource type="Script" uid="uid://bqlehtd8g2bai" path="res://src/levels/redbtn1.gd" id="6_8s5si"]
[ext_resource type="Texture2D" uid="uid://c51jssonygtr0" path="res://src/images/redbtn_unpressed.png" id="7_c8fom"]
[ext_resource type="Script" uid="uid://v6rorgy5igjy" path="res://src/levels/area_2d_2.gd" id="8_c8fom"]
[ext_resource type="PackedScene" uid="uid://dfk0gqqkccoqh" path="res://src/levels/kill_item.tscn" id="9_ovyr1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lypov"]
texture = ExtResource("1_u7gnt")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_a0sv2"]
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_lypov")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8s5si"]
size = Vector2(31.9756, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tppch"]
size = Vector2(15, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovyr1"]
size = Vector2(24.5, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2dq7"]
size = Vector2(489, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84a2j"]
size = Vector2(489, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxa2t"]
size = Vector2(567, 20)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_a0sv2")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(-131, -16)
tile_set = SubResource("TileSet_a0sv2")
format = 2
layer_0/tile_data = PackedInt32Array(-196555, 589825, 2, 851995, 65538, 6, 851996, 65538, 6, 851997, 65538, 6, 851998, 65538, 6, 851999, 65538, 6, 852000, 65538, 6, 852001, 65538, 6, 393243, 65538, 8, 393244, 65538, 8, 393245, 65538, 8, 393246, 65538, 8, 393247, 65538, 8, 393248, 65538, 8, 393249, 65538, 8, 393242, 65538, 8, 393235, 65538, 8, 393236, 65538, 8, 393237, 65538, 8, 393238, 65538, 8, 393239, 65538, 8, 393240, 65538, 8, 393241, 65538, 8, 65555, 65538, 7, 131091, 65538, 7, 196627, 65538, 7, 262163, 65538, 7, 327699, 65538, 7, 65556, 65538, 7, 131092, 65538, 7, 196628, 65538, 7, 262164, 65538, 7, 327700, 65538, 7, 65557, 65538, 7, 131093, 65538, 7, 196629, 65538, 7, 262165, 65538, 7, 327701, 65538, 7, 65558, 65538, 7, 131094, 65538, 7, 196630, 65538, 7, 262166, 65538, 7, 327702, 65538, 7, 65559, 65538, 7, 131095, 65538, 7, 196631, 65538, 7, 262167, 65538, 7, 327703, 65538, 7, 65560, 65538, 7, 131096, 65538, 7, 196632, 65538, 7, 262168, 65538, 7, 327704, 65538, 7, 65561, 65538, 7, 131097, 65538, 7, 196633, 65538, 7, 262169, 65538, 7, 327705, 65538, 7, 65562, 65538, 7, 131098, 65538, 7, 196634, 65538, 7, 262170, 65538, 7, 327706, 65538, 7, 65563, 65538, 7, 131099, 65538, 7, 196635, 65538, 7, 262171, 65538, 7, 327707, 65538, 7, 65564, 65538, 7, 131100, 65538, 7, 196636, 65538, 7, 262172, 65538, 7, 327708, 65538, 7, 65565, 65538, 7, 131101, 65538, 7, 196637, 65538, 7, 262173, 65538, 7, 327709, 65538, 7, 65566, 65538, 7, 131102, 65538, 7, 196638, 65538, 7, 262174, 65538, 7, 327710, 65538, 7, 65567, 65538, 7, 131103, 65538, 7, 196639, 65538, 7, 262175, 65538, 7, 327711, 65538, 7, 65568, 65538, 7, 131104, 65538, 7, 196640, 65538, 7, 262176, 65538, 7, 327712, 65538, 7, 65569, 65538, 7, 131105, 65538, 7, 196641, 65538, 7, 262177, 65538, 7, 327713, 65538, 7, 917523, 65538, 4, 983059, 65538, 4, 1048595, 65538, 4, 1114131, 65538, 4, 1179667, 65538, 4, 1245203, 65538, 4, 1310739, 65538, 4, 917524, 65538, 4, 983060, 65538, 4, 1048596, 65538, 4, 1114132, 65538, 4, 1179668, 65538, 4, 1245204, 65538, 4, 1310740, 65538, 4, 917525, 65538, 4, 983061, 65538, 4, 1048597, 65538, 4, 1114133, 65538, 4, 1179669, 65538, 4, 1245205, 65538, 4, 1310741, 65538, 4, 917526, 65538, 4, 983062, 65538, 4, 1048598, 65538, 4, 1114134, 65538, 4, 1179670, 65538, 4, 1245206, 65538, 4, 1310742, 65538, 4, 917527, 65538, 4, 983063, 65538, 4, 1048599, 65538, 4, 1114135, 65538, 4, 1179671, 65538, 4, 1245207, 65538, 4, 1310743, 65538, 4, 917528, 65538, 4, 983064, 65538, 4, 1048600, 65538, 4, 1114136, 65538, 4, 1179672, 65538, 4, 1245208, 65538, 4, 1310744, 65538, 4, 917529, 65538, 4, 983065, 65538, 4, 1048601, 65538, 4, 1114137, 65538, 4, 1179673, 65538, 4, 1245209, 65538, 4, 1310745, 65538, 4, 917530, 65538, 4, 983066, 65538, 4, 1048602, 65538, 4, 1114138, 65538, 4, 1179674, 65538, 4, 1245210, 65538, 4, 1310746, 65538, 4, 917531, 65538, 4, 983067, 65538, 4, 1048603, 65538, 4, 1114139, 65538, 4, 1179675, 65538, 4, 1245211, 65538, 4, 1310747, 65538, 4, 917532, 65538, 4, 983068, 65538, 4, 1048604, 65538, 4, 1114140, 65538, 4, 1179676, 65538, 4, 1245212, 65538, 4, 1310748, 65538, 4, 917533, 65538, 4, 983069, 65538, 4, 1048605, 65538, 4, 1114141, 65538, 4, 1179677, 65538, 4, 1245213, 65538, 4, 1310749, 65538, 4, 917534, 65538, 4, 983070, 65538, 4, 1048606, 65538, 4, 1114142, 65538, 4, 1179678, 65538, 4, 1245214, 65538, 4, 1310750, 65538, 4, 917535, 65538, 4, 983071, 65538, 4, 1048607, 65538, 4, 1114143, 65538, 4, 1179679, 65538, 4, 1245215, 65538, 4, 1310751, 65538, 4, 917536, 65538, 4, 983072, 65538, 4, 1048608, 65538, 4, 1114144, 65538, 4, 1179680, 65538, 4, 1245216, 65538, 4, 1310752, 65538, 4, 917537, 65538, 4, 983073, 65538, 4, 1048609, 65538, 4, 1114145, 65538, 4, 1179681, 65538, 4, 1245217, 65538, 4, 1310753, 65538, 4, 851987, 65538, 6, 851988, 65538, 6, 851989, 65538, 6, 851990, 65538, 6, 851991, 65538, 6, 851992, 65538, 6, 851993, 65538, 6, 851994, 65538, 6, 852014, 2, 6, 852015, 65538, 6, 852016, 65538, 6, 852017, 65538, 6, 852018, 65538, 6, 852019, 65538, 6, 852020, 131074, 6, 917550, 2, 7, 983086, 2, 7, 1048622, 2, 7, 1114158, 2, 7, 1179694, 2, 7, 1245230, 2, 7, 1310766, 2, 7, 917556, 131074, 7, 983092, 131074, 7, 1048628, 131074, 7, 1114164, 131074, 7, 1179700, 131074, 7, 1245236, 131074, 7, 1310772, 131074, 7, 917551, 65538, 7, 983087, 65538, 7, 1048623, 65538, 7, 1114159, 65538, 7, 1179695, 65538, 7, 1245231, 65538, 7, 1310767, 65538, 7, 917552, 65538, 7, 983088, 65538, 7, 1048624, 65538, 7, 1114160, 65538, 7, 1179696, 65538, 7, 1245232, 65538, 7, 1310768, 65538, 7, 917553, 65538, 7, 983089, 65538, 7, 1048625, 65538, 7, 1114161, 65538, 7, 1179697, 65538, 7, 1245233, 65538, 7, 1310769, 65538, 7, 917554, 65538, 7, 983090, 65538, 7, 1048626, 65538, 7, 1114162, 65538, 7, 1179698, 65538, 7, 1245234, 65538, 7, 1310770, 65538, 7, 917555, 65538, 7, 983091, 65538, 7, 1048627, 65538, 7, 1114163, 65538, 7, 1179699, 65538, 7, 1245235, 65538, 7, 1310771, 65538, 7, 393250, 65538, 8, 393251, 65538, 8, 393252, 65538, 8, 393253, 65538, 8, 393254, 65538, 8, 393255, 65538, 8, 393256, 65538, 8, 393257, 65538, 8, 393258, 65538, 8, 393259, 65538, 8, 393260, 65538, 8, 393261, 65538, 8, 393262, 65538, 8, 393263, 65538, 8, 393264, 65538, 8, 393265, 65538, 8, 393266, 65538, 8, 393267, 65538, 8, 393268, 131074, 8, 65588, 131074, 7, 131124, 131074, 7, 196660, 131074, 7, 262196, 131074, 7, 327732, 131074, 7, 65570, 65538, 7, 131106, 65538, 7, 196642, 65538, 7, 262178, 65538, 7, 327714, 65538, 7, 65571, 65538, 7, 131107, 65538, 7, 196643, 65538, 7, 262179, 65538, 7, 327715, 65538, 7, 65572, 65538, 7, 131108, 65538, 7, 196644, 65538, 7, 262180, 65538, 7, 327716, 65538, 7, 65573, 65538, 7, 131109, 65538, 7, 196645, 65538, 7, 262181, 65538, 7, 327717, 65538, 7, 65574, 65538, 7, 131110, 65538, 7, 196646, 65538, 7, 262182, 65538, 7, 327718, 65538, 7, 65575, 65538, 7, 131111, 65538, 7, 196647, 65538, 7, 262183, 65538, 7, 327719, 65538, 7, 65576, 65538, 7, 131112, 65538, 7, 196648, 65538, 7, 262184, 65538, 7, 327720, 65538, 7, 65577, 65538, 7, 131113, 65538, 7, 196649, 65538, 7, 262185, 65538, 7, 327721, 65538, 7, 65578, 65538, 7, 131114, 65538, 7, 196650, 65538, 7, 262186, 65538, 7, 327722, 65538, 7, 65579, 65538, 7, 131115, 65538, 7, 196651, 65538, 7, 262187, 65538, 7, 327723, 65538, 7, 65580, 65538, 7, 131116, 65538, 7, 196652, 65538, 7, 262188, 65538, 7, 327724, 65538, 7, 65581, 65538, 7, 131117, 65538, 7, 196653, 65538, 7, 262189, 65538, 7, 327725, 65538, 7, 65582, 65538, 7, 131118, 65538, 7, 196654, 65538, 7, 262190, 65538, 7, 327726, 65538, 7, 65583, 65538, 7, 131119, 65538, 7, 196655, 65538, 7, 262191, 65538, 7, 327727, 65538, 7, 65584, 65538, 7, 131120, 65538, 7, 196656, 65538, 7, 262192, 65538, 7, 327728, 65538, 7, 65585, 65538, 7, 131121, 65538, 7, 196657, 65538, 7, 262193, 65538, 7, 327729, 65538, 7, 65586, 65538, 7, 131122, 65538, 7, 196658, 65538, 7, 262194, 65538, 7, 327730, 65538, 7, 65587, 65538, 7, 131123, 65538, 7, 196659, 65538, 7, 262195, 65538, 7, 327731, 65538, 7, 851986, 2, 6, 917522, 2, 7, 983058, 2, 7, 1048594, 2, 7, 1179666, 65538, 4, 1245202, 65538, 4, 1310728, 65538, 6, 1310729, 65538, 6, 1310730, 65538, 6, 1310731, 65538, 6, 1310732, 65538, 6, 1310733, 65538, 6, 1310734, 2, 4, 1310735, 65538, 4, 1310736, 65538, 4, 1310737, 65538, 4, 393234, 2, 8, 65554, 65538, 7, 131090, 2, 7, 196626, 2, 7, 262162, 2, 7, 327698, 2, 7, 65544, 65538, 8, 65545, 65538, 8, 65546, 65538, 8, 65547, 65538, 8, 65548, 65538, 8, 65549, 65538, 8, 65550, 65538, 8, 65551, 65538, 8, 65552, 65538, 8, 65553, 65538, 8, 1376243, 65538, 7, 1376244, 65538, 4, 1376245, 65538, 4, 1376246, 131074, 4, 1376247, 65538, 6, 1376248, 65538, 6, 1376249, 65538, 6, 1376250, 65538, 6, 1376251, 65538, 6, 1376252, 65538, 6, 1376253, 65538, 6, 1376254, 65538, 6, 1376255, 65538, 6, 1310720, 65538, 6, 1310721, 65538, 6, 1310722, 65538, 6, 1310723, 65538, 6, 1310724, 65538, 6, 1310725, 65538, 6, 1310726, 65538, 6, 1310727, 65538, 6, 131059, 65538, 7, 131060, 65538, 8, 131061, 65538, 8, 131062, 65538, 8, 131063, 65538, 8, 131064, 65538, 8, 131065, 65538, 8, 131066, 65538, 8, 131067, 65538, 8, 131068, 65538, 8, 131069, 65538, 8, 131070, 65538, 8, 131071, 65538, 8, 65536, 65538, 8, 65537, 65538, 8, 65538, 65538, 8, 65539, 65538, 8, 65540, 65538, 8, 65541, 65538, 8, 65542, 65538, 8, 65543, 65538, 8, 196595, 131074, 7, 262131, 131074, 7, 327667, 131074, 7, 393203, 131074, 7, 458739, 131074, 7, 524275, 131074, 7, 589811, 131074, 7, 655347, 131074, 7, 720883, 131074, 7, 786419, 131074, 7, 1179635, 65538, 3, 1245171, 65538, 4, 1310707, 65538, 4, 1179636, 65538, 3, 1179637, 65538, 3, 1179638, 131074, 3, 1245174, 131074, 4, 1310710, 131074, 4, 1245172, 65538, 4, 1310708, 65538, 4, 1245173, 65538, 4, 1310709, 65538, 4, 1114127, 65538, 3, 1114128, 65538, 3, 1114129, 65538, 3, 1114126, 2, 3, 1179662, 2, 4, 1245198, 2, 4, 1179663, 65538, 4, 1245199, 65538, 4, 1179664, 65538, 4, 1245200, 65538, 4, 1179665, 65538, 4, 1245201, 65538, 4, 1310738, 65538, 4, 1114130, 65538, 4, 983033, 393218, 0, 1048569, 393218, 1, 983034, 458754, 0, 1048570, 458754, 1, 983035, 524290, 0, 1048571, 524290, 1, 1114106, 458754, 2, 1179642, 458754, 2, 1245178, 458754, 2, 1310714, 458754, 2, 786430, 65538, 3, 851967, 131074, 4, 851965, 2, 4, 917502, 65538, 5, 917501, 2, 5, 786429, 2, 3, 786431, 131074, 3, 917503, 131074, 5, 851966, 65538, 4, 1179631, 65538, 9, 1179630, 65538, 9, 1179629, 65538, 9, 1179628, 65538, 9, 1179627, 2, 9, 1179632, 131074, 9, 1245168, 131074, 10, 1310704, 131074, 10, 1376240, 131074, 10, 1441776, 131074, 10, 1507312, 131074, 10, 1572848, 131074, 10, 1638384, 131074, 10, 1703920, 131074, 10, 1769456, 131074, 10, 1834992, 131074, 10, 1900528, 131074, 10, 1245163, 2, 10, 1310699, 2, 10, 1376235, 2, 10, 1441771, 2, 10, 1507307, 2, 10, 1572843, 2, 10, 1638379, 2, 10, 1703915, 2, 10, 1769451, 2, 10, 1834987, 2, 10, 1900523, 2, 10, 1245164, 65538, 10, 1310700, 65538, 10, 1376236, 65538, 10, 1441772, 65538, 10, 1507308, 65538, 10, 1572844, 65538, 10, 1638380, 65538, 10, 1703916, 65538, 10, 1769452, 65538, 10, 1834988, 65538, 10, 1900524, 65538, 10, 1245165, 65538, 10, 1310701, 65538, 10, 1376237, 65538, 10, 1441773, 65538, 10, 1507309, 65538, 10, 1572845, 65538, 10, 1638381, 65538, 10, 1703917, 65538, 10, 1769453, 65538, 10, 1834989, 65538, 10, 1900525, 65538, 10, 1245166, 65538, 10, 1310702, 65538, 10, 1376238, 65538, 10, 1441774, 65538, 10, 1507310, 65538, 10, 1572846, 65538, 10, 1638382, 65538, 10, 1703918, 65538, 10, 1769454, 65538, 10, 1834990, 65538, 10, 1900526, 65538, 10, 1245167, 65538, 10, 1310703, 65538, 10, 1376239, 65538, 10, 1441775, 65538, 10, 1507311, 65538, 10, 1572847, 65538, 10, 1638383, 65538, 10, 1703919, 65538, 10, 1769455, 65538, 10, 1834991, 65538, 10, 1900527, 65538, 10, 1048548, 393218, 0, 1114084, 393218, 1, 1048549, 458754, 0, 1114085, 458754, 1, 1048550, 524290, 0, 1114086, 524290, 1, 1179621, 458754, 2, 1245157, 458754, 2, 1310693, 458754, 2, 1376229, 458754, 2, 1441765, 458754, 2, 1507301, 458754, 2, 1572837, 458754, 2, 917471, 65538, 9, 1048543, 65538, 11, 983008, 131074, 10, 983006, 2, 10, 917472, 131074, 9, 917470, 2, 9, 1048542, 2, 11, 1048544, 131074, 11, 983007, 65538, 10, 917456, 65538, 3, 917457, 65538, 3, 917458, 65538, 3, 917459, 65538, 3, 917460, 65538, 3, 917461, 65538, 3, 917462, 65538, 3, 917463, 65538, 3, 917464, 65538, 3, 917465, 65538, 3, 917466, 65538, 3, 917467, 65538, 3, 917468, 131074, 3, 983004, 131074, 4, 1048540, 131074, 4, 1114076, 131074, 4, 1179612, 131074, 4, 1245148, 131074, 4, 1310684, 131074, 4, 1376220, 131074, 4, 1441756, 131074, 4, 982992, 65538, 4, 1048528, 65538, 4, 1114064, 65538, 4, 1179600, 65538, 4, 1245136, 65538, 4, 1310672, 65538, 4, 1376208, 65538, 4, 1441744, 65538, 4, 982993, 65538, 4, 1048529, 65538, 4, 1114065, 65538, 4, 1179601, 65538, 4, 1245137, 65538, 4, 1310673, 65538, 4, 1376209, 65538, 4, 1441745, 65538, 4, 982994, 65538, 4, 1048530, 65538, 4, 1114066, 65538, 4, 1179602, 65538, 4, 1245138, 65538, 4, 1310674, 65538, 4, 1376210, 65538, 4, 1441746, 65538, 4, 982995, 65538, 4, 1048531, 65538, 4, 1114067, 65538, 4, 1179603, 65538, 4, 1245139, 65538, 4, 1310675, 65538, 4, 1376211, 65538, 4, 1441747, 65538, 4, 982996, 65538, 4, 1048532, 65538, 4, 1114068, 65538, 4, 1179604, 65538, 4, 1245140, 65538, 4, 1310676, 65538, 4, 1376212, 65538, 4, 1441748, 65538, 4, 982997, 65538, 4, 1048533, 65538, 4, 1114069, 65538, 4, 1179605, 65538, 4, 1245141, 65538, 4, 1310677, 65538, 4, 1376213, 65538, 4, 1441749, 65538, 4, 982998, 65538, 4, 1048534, 65538, 4, 1114070, 65538, 4, 1179606, 65538, 4, 1245142, 65538, 4, 1310678, 65538, 4, 1376214, 65538, 4, 1441750, 65538, 4, 982999, 65538, 4, 1048535, 65538, 4, 1114071, 65538, 4, 1179607, 65538, 4, 1245143, 65538, 4, 1310679, 65538, 4, 1376215, 65538, 4, 1441751, 65538, 4, 983000, 65538, 4, 1048536, 65538, 4, 1114072, 65538, 4, 1179608, 65538, 4, 1245144, 65538, 4, 1310680, 65538, 4, 1376216, 65538, 4, 1441752, 65538, 4, 983001, 65538, 4, 1048537, 65538, 4, 1114073, 65538, 4, 1179609, 65538, 4, 1245145, 65538, 4, 1310681, 65538, 4, 1376217, 65538, 4, 1441753, 65538, 4, 983002, 65538, 4, 1048538, 65538, 4, 1114074, 65538, 4, 1179610, 65538, 4, 1245146, 65538, 4, 1310682, 65538, 4, 1376218, 65538, 4, 1441754, 65538, 4, 983003, 65538, 4, 1048539, 65538, 4, 1114075, 65538, 4, 1179611, 65538, 4, 1245147, 65538, 4, 1310683, 65538, 4, 1376219, 65538, 4, 1441755, 65538, 4, 589776, 65538, 5, 589777, 65538, 5, 589778, 65538, 5, 589779, 65538, 5, 589780, 65538, 5, 589781, 65538, 5, 589782, 65538, 5, 589783, 65538, 5, 589784, 65538, 5, 589785, 65538, 5, 589786, 65538, 5, 589787, 65538, 5, 589788, 131074, 5, 131036, 131074, 4, 196572, 131074, 4, 262108, 131074, 4, 327644, 131074, 4, 393180, 131074, 4, 458716, 131074, 4, 524252, 131074, 4, 131024, 65538, 4, 196560, 65538, 4, 262096, 65538, 4, 327632, 65538, 4, 393168, 65538, 4, 458704, 65538, 4, 524240, 65538, 4, 131025, 65538, 4, 196561, 65538, 4, 262097, 65538, 4, 327633, 65538, 4, 393169, 65538, 4, 458705, 65538, 4, 524241, 65538, 4, 131026, 65538, 4, 196562, 65538, 4, 262098, 65538, 4, 327634, 65538, 4, 393170, 65538, 4, 458706, 65538, 4, 524242, 65538, 4, 131027, 65538, 4, 196563, 65538, 4, 262099, 65538, 4, 327635, 65538, 4, 393171, 65538, 4, 458707, 65538, 4, 524243, 65538, 4, 131028, 65538, 4, 196564, 65538, 4, 262100, 65538, 4, 327636, 65538, 4, 393172, 65538, 4, 458708, 65538, 4, 524244, 65538, 4, 131029, 65538, 4, 196565, 65538, 4, 262101, 65538, 4, 327637, 65538, 4, 393173, 65538, 4, 458709, 65538, 4, 524245, 65538, 4, 131030, 65538, 4, 196566, 65538, 4, 262102, 65538, 4, 327638, 65538, 4, 393174, 65538, 4, 458710, 65538, 4, 524246, 65538, 4, 131031, 65538, 4, 196567, 65538, 4, 262103, 65538, 4, 327639, 65538, 4, 393175, 65538, 4, 458711, 65538, 4, 524247, 65538, 4, 131032, 65538, 4, 196568, 65538, 4, 262104, 65538, 4, 327640, 65538, 4, 393176, 65538, 4, 458712, 65538, 4, 524248, 65538, 4, 131033, 65538, 4, 196569, 65538, 4, 262105, 65538, 4, 327641, 65538, 4, 393177, 65538, 4, 458713, 65538, 4, 524249, 65538, 4, 131034, 65538, 4, 196570, 65538, 4, 262106, 65538, 4, 327642, 65538, 4, 393178, 65538, 4, 458714, 65538, 4, 524250, 65538, 4, 131035, 65538, 4, 196571, 65538, 4, 262107, 65538, 4, 327643, 65538, 4, 393179, 65538, 4, 458715, 65538, 4, 524251, 65538, 4, 917455, 2, 3, 982991, 2, 4, 1048527, 2, 4, 1114063, 2, 4, 1179599, 2, 4, 1245135, 2, 4, 1310671, 2, 4, 1376207, 2, 4, 1441743, 2, 4, 851914, 65538, 9, 917450, 65538, 10, 982986, 65538, 11, 917451, 131074, 10, 982987, 131074, 11, 851915, 131074, 9, 851913, 2, 9, 982985, 2, 11, 917449, 2, 10, 786360, 2, 9, 851896, 2, 10, 917432, 2, 11, 786361, 65538, 9, 851897, 65538, 10, 917433, 65538, 11, 786362, 131074, 9, 851898, 131074, 10, 917434, 131074, 11, 982961, 2, 9, 1048497, 2, 10, 1114033, 2, 11, 982962, 65538, 9, 1048498, 65538, 10, 1114034, 65538, 11, 982963, 131074, 9, 1048499, 131074, 10, 1114035, 131074, 11, 786459, 262146, 2, 786484, 196610, 2, 1245187, 196610, 2, 1310712, 262146, 2, 1310718, 327682, 0, 1310719, 327682, 0, 786373, 393218, 0, 851909, 393218, 1, 786374, 458754, 0, 851910, 458754, 1, 786375, 524290, 0, 851911, 524290, 1, 917446, 458754, 2, 982982, 458754, 2, 1048518, 458754, 2, 1114054, 458754, 2, 1179590, 458754, 2, 1245126, 458754, 2, 1310662, 458754, 2, 1376198, 458754, 2, 1441734, 458754, 2, 655294, 2, 9, 720830, 2, 10, 786366, 2, 11, 655295, 65538, 9, 720831, 65538, 10, 786367, 65538, 11, 655296, 131074, 9, 720832, 131074, 10, 786368, 131074, 11)

[node name="background_industrial" parent="." instance=ExtResource("2_a0sv2")]
position = Vector2(-403, 120)

[node name="spawnpoint" type="Node2D" parent="."]
position = Vector2(331, 175)

[node name="Bridge" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge"]
position = Vector2(509, 201)
rotation = -3.14159
scale = Vector2(6.00458, 1)
shape = SubResource("RectangleShape2D_8s5si")

[node name="bridge" type="Sprite2D" parent="Bridge"]
texture_filter = 1
position = Vector2(509.24, 200)
rotation = -3.14159
scale = Vector2(6.00458, 1)
texture = ExtResource("5_ebaqd")

[node name="Door" type="StaticBody2D" parent="."]

[node name="Door" type="Sprite2D" parent="Door"]
texture_filter = 1
position = Vector2(242.5, 144.5)
scale = Vector2(2.6875, 2.96875)
texture = ExtResource("4_tppch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(242, 144)
shape = SubResource("RectangleShape2D_tppch")

[node name="Door2" type="StaticBody2D" parent="."]
position = Vector2(-587, 79)

[node name="Door" type="Sprite2D" parent="Door2"]
texture_filter = 1
position = Vector2(256, 137)
scale = Vector2(1.0625, 2.46875)
texture = ExtResource("4_tppch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2"]
position = Vector2(255.5, 135.5)
shape = SubResource("RectangleShape2D_tppch")

[node name="DoorPos" type="Node2D" parent="Door2"]
position = Vector2(256, 137)

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("6_8s5si")

[node name="RedbtnUnpressed" type="Sprite2D" parent="Area2D"]
texture_filter = 1
position = Vector2(689, 185)
scale = Vector2(1, 0.75)
texture = ExtResource("7_c8fom")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(689, 186)
shape = SubResource("RectangleShape2D_ovyr1")

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource("8_c8fom")

[node name="RedbtnUnpressed" type="Sprite2D" parent="Area2D2"]
texture_filter = 1
position = Vector2(-159, 153)
scale = Vector2(1, 0.75)
texture = ExtResource("7_c8fom")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-159, 154)
shape = SubResource("RectangleShape2D_ovyr1")

[node name="RightEdge" type="Node2D" parent="."]
position = Vector2(721, 155)

[node name="LeftEdge" type="Node2D" parent="."]
position = Vector2(-1667, 140)

[node name="BottomEdge" type="Node2D" parent="."]
position = Vector2(57, 319)

[node name="TopEdge" type="Node2D" parent="."]
position = Vector2(61, 1)

[node name="Door2Position" type="Node2D" parent="."]
position = Vector2(-334, 296)

[node name="Audio" type="Node" parent="."]

[node name="FmodBankLoader" type="FmodBankLoader" parent="Audio"]
bank_paths = ["res://fmodBanks/Music.bank", "res://fmodBanks/Music.strings.bank"]

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="Audio"]
event_guid = "{8a59b9e6-c90d-43dd-9232-5ff56d80b3de}"
autoplay = true
volume = 0.5

[node name="KillItem" parent="." instance=ExtResource("9_ovyr1")]
position = Vector2(464, 292)

[node name="TeleportObject" type="Node2D" parent="KillItem"]
position = Vector2(-133, -119)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillItem"]
position = Vector2(45, 16)
shape = SubResource("RectangleShape2D_k2dq7")

[node name="KillItem2" parent="." instance=ExtResource("9_ovyr1")]
position = Vector2(-477, 292)

[node name="TeleportObject" type="Node2D" parent="KillItem2"]
position = Vector2(48, -50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillItem2"]
position = Vector2(-36, 16)
shape = SubResource("RectangleShape2D_84a2j")

[node name="KillItem3" parent="." instance=ExtResource("9_ovyr1")]
position = Vector2(-1056, 292)

[node name="TeleportObject" type="Node2D" parent="KillItem3"]
position = Vector2(176, -121)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillItem3"]
position = Vector2(-142.5, 16)
shape = SubResource("RectangleShape2D_hxa2t")

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D2" to="Area2D2" method="_on_body_exited"]
[connection signal="tree_entered" from="Area2D2" to="Area2D2" method="_on_tree_entered"]
[connection signal="tree_exiting" from="Area2D2" to="Area2D2" method="_on_tree_exiting"]
